adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Lorem</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit asperiores obcaecati odio recusandae quam! Corporis nostrum maxime nulla ex delectus qui, pariatur quidem minima repellendus asperiores et! Dicta, nemo sequi?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut saepe optio quae, necessitatibus amet explicabo, numquam, sunt consequatur dolore magni id. Eos suscipit inventore repellendus eius, aperiam expedita ipsum quis.</p>
 </body>
 </html>
